añadido multi idioma

--- a/src/content/blog/es/firebase-genkit.mdx
+++ b/src/content/blog/es/firebase-genkit.mdx
@@ -3,6 +3,7 @@ title: 'Firebase Genkit'
 description: 'En la Jsconf 2025, celebrada en Madrid, descubrí una interesnate librería en uno de los workshops, se trataba del framework Firebase Genkit.'
 pubDate: 'Mar 18, 2025'
 heroImage: '/1_mn5o7Fj8RNSp09dalxywow.webp'
+customURL: '/blog/en/firebase-genkit-framework/'
 ---
 
 En la Jsconf 2025, celebrada en Madrid, descubrí una interesnate librería en uno de los workshops, se trataba del framework Firebase Genkit.
