--- a/src/content/blog/es/gemini-robotics-el-salto-de-google-hacia-la-robótica-inteligente.mdx
+++ b/src/content/blog/es/gemini-robotics-el-salto-de-google-hacia-la-robótica-inteligente.mdx
@@ -3,6 +3,7 @@ title: 'Gemini Robotics: el salto de Google hacia la robótica inteligente'
 description: 'Google, de la mano de su laboratorio DeepMind, sigue impulsando el futuro de la inteligencia artificial y la robótica con Gemini Robotics y Gemini Robotics-ER'
 pubDate: 'Mar 18, 2025'
 heroImage: '/0_GglpfgFH6KlqkhD2.webp'
+customURL: '/blog/en/gemini-robotics-googles-leap-into-intelligent-robotics/'
 ---
 Una vez más, Google, de la mano de su laboratorio DeepMind, sigue impulsando el futuro de la inteligencia artificial y la robótica con Gemini Robotics y Gemini Robotics-ER, dos proyectos innovadores que integran las capacidades más avanzadas de Gemini 2.0 en robots interactivos, hábiles y de propósito general.
 <br/>
