Fix punctuation in document processing blog post
Corrected punctuation and formatting in the introduction.

--- a/src/content/blog/en/chonkie-and-docling-two-complementary-approaches-to-document-processing-rag.mdx
+++ b/src/content/blog/en/chonkie-and-docling-two-complementary-approaches-to-document-processing-rag.mdx
@@ -6,7 +6,7 @@ heroImage: '/doclingvschonkiepng.png'
 customURL: '/blog/es/chonkie-y-docling-dos-enfoques-complementarios-para-procesar-documentos-rag/'
 ---
 
-In the world of intelligent text organization and retrieval (for example, in **RAG** architectures — *retrieval-augmented generation*), one of the main challenges is preparing documents so that they are “digestible” by the retrieval and generation components. This is where **chunking** comes into play — that is, splitting text into coherent pieces — but also correctly interpreting the document itself (structure, tables, layout, etc.).
+In the world of intelligent text organization and retrieval (for example, in **RAG** architectures *retrieval-augmented generation*), one of the main challenges is preparing documents so that they are “digestible” by the retrieval and generation components. This is where **chunking** comes into play, that is, splitting text into coherent pieces, but also correctly interpreting the document itself (structure, tables, layout, etc.).
 
 Two recent tools stand out for their distinct yet potentially complementary approaches:
 
