Replace OpenAIEmbeddings import with chonkie
Replace OpenAIEmbeddings import with chonkie

--- a/src/content/blog/en/chonkie-and-docling-two-complementary-approaches-to-document-processing-rag.mdx
+++ b/src/content/blog/en/chonkie-and-docling-two-complementary-approaches-to-document-processing-rag.mdx
@@ -165,7 +165,7 @@ An ideal hybrid strategy could be:
     from docling import DocumentConverter
     from chonkie import TextChunker
     from langchain_community.vectorstores import FAISS
-    from langchain_openai import OpenAIEmbeddings
+    from chonkie import OpenAIEmbeddings
 
     # 1. Convert a PDF into a structured representation with Docling
     converter = DocumentConverter()
