add image articles ACE

--- a/src/content/blog/en/the_trick_from_stanford_that_makes_artificial_intelligences_learn_on_their_own.mdx
+++ b/src/content/blog/en/the_trick_from_stanford_that_makes_artificial_intelligences_learn_on_their_own.mdx
@@ -20,6 +20,8 @@ And the best part is that this “notebook” isn’t just memory: it becomes a 
 
 ## A team of three inside the AI’s head
 
+<img src="/ace-esquema.png" alt="Diagram of the ACE process: Generator, Reflector, and Curator" class="w-full max-w-7xl mx-auto h-auto rounded-lg shadow" loading="lazy"/><br/>
+
 The trick works because ACE divides the process into three parts that work together:
 
 1. **The generator**, which performs the task.
@@ -84,6 +86,7 @@ But ACE proves the opposite: **what they really like is dense, meaningful contex
 
 Each reflection adds layers of useful information, and over time the model **reasons better and understands more**.
 In a way, it learns to think about how it thinks.
+<br/>
 
 ## The next step: AIs with living memory
 
