--- a/src/content/blog/es/el_truco_de_stanford_para_que_las_inteligencias_artificiales_aprendan_sin_ayuda.mdx
+++ b/src/content/blog/es/el_truco_de_stanford_para_que_las_inteligencias_artificiales_aprendan_sin_ayuda.mdx
@@ -21,6 +21,8 @@ Y lo mejor es que ese “cuaderno” no es solo memoria: se convierte en una esp
 
 ## Un equipo de tres en la cabeza de la IA
 
+<img src="/ace-esquema.png" alt="Diagrama del proceso ACE: Generador, Reflector y Curador" class="w-full max-w-7xl mx-auto h-auto rounded-lg shadow" loading="lazy"/><br/>
+
 El truco funciona porque ACE divide el proceso en tres partes que trabajan juntas:
 
 1. **El generador**, que hace la tarea.
@@ -85,7 +87,7 @@ Pero ACE demuestra lo contrario: **lo que realmente les gusta es el contexto den
 
 Cada reflexión añade capas de información útil, y con el tiempo el modelo **razona mejor y entiende más**.
 En cierto modo, aprende a pensar sobre cómo piensa.
-
+<b/>
 ## El siguiente paso: IAs con memoria viva
 
 La idea detrás de ACE va más allá de mejorar el rendimiento.
